--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -18,7 +18,7 @@
             </div>
             <div class="form-control">
                 <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword">
+                <input type="password" name="confirmPassword" id="confirmPassword" value="<% csrfToken %">
             </div>
             <button class="btn" type="submit">sign up</button>
         </form>
