--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -5,7 +5,7 @@
 
 <body>
    <%- include('../includes/navigation.ejs') %>
-
+    <div><%  errorMessage %></div>
     <main>
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
@@ -16,6 +16,7 @@
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
             </div>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Login</button>
         </form>
     </main>
