--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -5,10 +5,11 @@
 
 <body>
    <%- include('../includes/navigation.ejs') %>
-    <% if(errorMessage) { %>
-    <div><%= errorMessage %></div>
-    <% } %>
+
     <main>
+        <% if (errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% } %>
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
